prevent main scrollbar from being scrolled when reaching the end of the command bar

--- a/src/views/options/components/command-select/layout.css
+++ b/src/views/options/components/command-select/layout.css
@@ -284,6 +284,7 @@ a[target="_blank"]::after {
   width: var(--sidebar-width);
   overflow-y: hidden;
   flex: 1;
+  overscroll-behavior: none;
 }
 
 .cb-main:hover {
